--- a/Standup/Standup.csproj
+++ b/Standup/Standup.csproj
@@ -1,20 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" Generator="MSBuild:Compile"/>
-    <Content Include="@(Protobuf)" />
-    <None Remove="@(Protobuf)" />
+    <None Remove="Protos\adder.proto" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore.Server" Version="0.1.20-pre1" />
-    <PackageReference Include="Google.Protobuf" Version="3.7.0" />
+    <Protobuf Include="Protos\adder.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+  </ItemGroup>
 
-    <PackageReference Include="Grpc.Tools" Version="1.20.0-pre3" PrivateAssets="All" />
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="0.1.21-pre1" />
+    <PackageReference Include="Google.Protobuf" Version="3.8.0" />
+
+    <PackageReference Include="Grpc.Tools" Version="1.21.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
