--- a/Standup/Standup.csproj
+++ b/Standup/Standup.csproj
@@ -14,10 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore.Server" Version="0.1.21-pre1" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="0.1.22-pre1" />
     <PackageReference Include="Google.Protobuf" Version="3.8.0" />
-
     <PackageReference Include="Grpc.Tools" Version="1.21.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="3.0.0-preview6.19307.2" />
   </ItemGroup>
 
 </Project>
